--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
 
 .list-container {
   padding: 10px;
-  margin-top: 15px;
 
   border: solid 1px;
   border-radius: 10px;
@@ -13,8 +12,8 @@
 
 .container {
   padding: 10px;
-  margin-top: 30%;
-  margin-left: 30%;
+  margin-top: 10vh;
+  margin-left: 10vw;
 
   border-radius: 10px;
   box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
@@ -22,8 +21,15 @@
   width: max-content;
 }
 
+.todo-count {
+  margin-top: 15px;
+}
+
 .input-box {
   margin-right: 10px;
+  border-radius: 8px;
+  border-width: 1px;
+  padding: 5px;
 }
 
 
@@ -32,7 +38,7 @@
 .button-30 {
   align-items: center;
   appearance: none;
-  background-color: #FCFCFD;
+  background-color: #fcfdfc;
   border-radius: 4px;
   border-width: 0;
   box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
